log

Thu 14 Mar 2024 02:47:45 PM UTC: 
 exercises.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:36:20: error: ‘temp’ undeclared (first use in this function)
   36 |       arr[i] = arr[temp-1];
      |                    ^~~~
exercises.c:36:20: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:32:7: error: unused variable ‘sizeTemp’ [-Werror=unused-variable]
   32 |   int sizeTemp = size;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2856e2b
Thu 14 Mar 2024 02:49:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:36:20: error: ‘temp’ undeclared (first use in this function)
   36 |       arr[i] = arr[temp-1];
      |                    ^~~~
exercises.c:36:20: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:32:7: error: unused variable ‘sizeTemp’ [-Werror=unused-variable]
   32 |   int sizeTemp = size;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
50efffb
Thu 14 Mar 2024 02:50:13 PM UTC: 
 exercises.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  0|6
total_score: 10/70
17bd0b1
Thu 14 Mar 2024 02:55:01 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|5
total_score: 20/70
730adaa
Thu 14 Mar 2024 03:02:31 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:54:3: error: expected ‘,’ or ‘;’ before ‘for’
   54 |   for (int i = 0; i < size; i++)
      |   ^~~
exercises.c:54:19: error: ‘i’ undeclared (first use in this function)
   54 |   for (int i = 0; i < size; i++)
      |                   ^
exercises.c:54:19: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:54:32: error: expected ‘;’ before ‘)’ token
   54 |   for (int i = 0; i < size; i++)
      |                                ^
      |                                ;
exercises.c:54:32: error: expected statement before ‘)’ token
Compilation failed
1b29874
